--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -3,7 +3,7 @@
 one:
   title: MyString
   date: 2023-12-20
-  description: MyText
+  entry: MyText
   trip_id: 1
   user_id: 1
   public: false
@@ -11,7 +11,7 @@ one:
 two:
   title: MyString
   date: 2023-12-20
-  description: MyText
+  entry: MyText
   trip_id: 1
   user_id: 1
   public: false
