--- a/test/fixtures/trips.yml
+++ b/test/fixtures/trips.yml
@@ -3,9 +3,9 @@
 one:
   start_date: 2023-12-17
   end_date: 2023-12-17
-  user_id: 1
+  user: one
 
 two:
   start_date: 2023-12-17
   end_date: 2023-12-17
-  user_id: 1
+  user: one
